--- a/ss.html
+++ b/ss.html
@@ -117,7 +117,7 @@
             <br/>
             <h5 class="center">Android版</h5>
 
-            <p class="center light">影梭客户端的官方中文版 For Android 。</p>
+            <p class="center light">影梭客户端的官方中文版 For Android Phones。</p>
             <p>&nbsp;</p><br/>
             <h6 class="center"><a href="shadow/ssandroid.apk" class="center btn-large waves-effect waves-light deep-purple lighten-1">立刻下载</a></h6>
           </div>
