--- a/ss.html
+++ b/ss.html
@@ -88,7 +88,7 @@
             <br/>
             <h5 class="center">Windows版</h5>
 
-            <p class="center">影梭客户端的官方中文版 For Windows。</p>
+            <p class="center">影梭客户端的官方中文Windows版</p>
             <p>&nbsp;</p><br/>
             <h6 class="center"><a href="shadow/sswin.zip" class="center btn-large waves-effect waves-light light-blue accent-3">立刻下载</a></h6>
             <!-- <a class="center btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a> -->
@@ -103,7 +103,7 @@
             <br/>
             <h5 class="center">Mac OS X版</h5>
 
-            <p class="center light">影梭客户端的官方中文版 For Mac OS X。</p>
+            <p class="center light">影梭客户端的官方中文Mac OS X版。</p>
             <p>&nbsp;</p><br/>
             <h6 class="center"><a href="shadow/ssmac.dmg" class="center btn-large waves-effect waves-light light-green accent-3">立刻下载</a></h6>
           </div>
@@ -117,7 +117,7 @@
             <br/>
             <h5 class="center">Android版</h5>
 
-            <p class="center light">影梭客户端的官方中文版 For Android Phones。</p>
+            <p class="center light">影梭客户端的官方中文Android版。</p>
             <p>&nbsp;</p><br/>
             <h6 class="center"><a href="shadow/ssandroid.apk" class="center btn-large waves-effect waves-light deep-purple lighten-1">立刻下载</a></h6>
           </div>
