--- a/ss.html
+++ b/ss.html
@@ -51,26 +51,6 @@
     <div class="parallax "><img src="background5.jpg" alt="Unsplashed background img 4"></div>
   </div>
 
-<!--   <div class="container">
-    <div class="section">
-
-      <div class="row">
-        <div class="col s12 center">
-          <h4>手动配置</h4>
-          <center>
-          <p align="center" class="light">服务器地址：107.181.155.172 <br /><br />
-          端口： 5555<br /><br />
-          密码： cliwa&souler<br /><br />
-          验证方式： AES-256-CFB<br /><br />
-          </p>
-          <p>&nbsp;</p>
-          如果觉得好用，欢迎联系站主购买私人账号。
-          </center>
-        </div>
-      </div>
-
-    </div>
-  </div> -->
 
 
 
@@ -143,7 +123,7 @@
           </p>
           <p>&nbsp;</p>
           <center>
-          <p align="center" class="light">如果您想获取私人梯子，请发送邮件至 <br /><br /><a href="mailto:liang@cliwa.me" class="btn-large waves-effect waves-light teal lighten-1">liang@cliwa.me</a><br /><br />
+          <p align="center" class="light">如果您想获取私人梯子，请联系 <br /><br /><a href="mailto:liang@cliwa.me" class="btn-large waves-effect waves-light teal lighten-1">liang@cliwa.me</a><br />购买私人账号<br /><br />
           <br/>谢谢</p>
           </center>
         </div>
