--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <br/>
             <h5 class="center">个人云</h5>
 
-            <p class="light">提供个人文件的实时备份和同步数据的解决方案，数据在服务器上加密存储，保证安全性。</p>
+            <p class="light">提供个人文件的实时备份和同步数据的解决方案，数据在服务器上加密存储，保证安全。</p>
             <p>&nbsp;</p><br/>
             <h6 class="center"><a href="http://file.cliwa.me" class="center btn-large waves-effect waves-light light-blue accent-3">点击进入</a></h6>
             <!-- <a class="center btn-floating btn-large waves-effect waves-light red"><i class="material-icons">add</i></a> -->
@@ -81,7 +81,7 @@
             <br/>
             <h5 class="center">个人云笔记</h5>
 
-            <p class="light">相对于公有笔记，使用私有云解决方案，带来更舒适的使用感受，每个设备都能轻松同步。</p>
+            <p class="light">相对于公有笔记，使用私有云解决方案，带来更舒适的使用感受，设备之间轻松同步。</p>
             <p>&nbsp;</p><br/>
             <h6 class="center"><a href="http://note.cliwa.me" class="center btn-large waves-effect waves-light light-green accent-3">点击进入</a></h6>
           </div>
