--- a/ss.html
+++ b/ss.html
@@ -3,7 +3,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
-  <title>Shadowsocks VPN</title>
+  <title>SS Service</title>
 
   <!-- CSS  -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
@@ -123,7 +123,7 @@
           </p>
           <p>&nbsp;</p>
           <center>
-          <p align="center" class="light">如果您想获取私人梯子，请联系 <br /><br /><a href="mailto:liang@cliwa.me" class="btn-large waves-effect waves-light teal lighten-1">liang@cliwa.me</a><br />购买私人账号<br /><br />
+          <p align="center" class="light">如果您想获取私人梯子，请联系 <br /><br /><a href="mailto:liang@cliwa.me" class="btn-large waves-effect waves-light teal lighten-1">liang@cliwa.me</a><br /><br />购买私人账号<br />
           <br/>谢谢</p>
           </center>
         </div>
